Tests/DependencyInjection/Fixtures/annotations/inject/invalid/FooClassInvalidSetterInjection2.php
<?php
use LoSo\LosoBundle\DependencyInjection\Annotations\Inject;
use LoSo\LosoBundle\DependencyInjection\Annotations\Service;

/** @Service */
class FooClassInvalidSetterInjection2
{
    /** @Inject("foo") */
    public function setDependencies($fooService, $barService)
    {
    }
}
